--- a/src/app/admin/tracks/add-track-dialog/add-track-dialog.component.html
+++ b/src/app/admin/tracks/add-track-dialog/add-track-dialog.component.html
@@ -3,6 +3,15 @@
   <div mat-dialog-content>
     <form [formGroup]="trackForm" [enctype]="'multipart/form-data'">
       <mat-grid-list [rowHeight]="80" [cols]="8" gutterSize="5">
+        <mat-grid-tile [colspan]="8" class="title-tile">
+          <mat-form-field>
+            <mat-label>Title</mat-label>
+            <input matInput type="text" class="title" formControlName="title">
+            @if (trackForm.get('title')?.hasError('required')) {
+              <mat-error>Title is required</mat-error>
+            }
+          </mat-form-field>
+        </mat-grid-tile>
         <mat-grid-tile [rowspan]="2" [colspan]="3" class="tile">
           <div class="container">
             <input type="file" #inputImage [hidden]="true" accept="image/jpeg,image/png,image/jpg" (change)="onFileSelected($event, 'cover')">
