--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -104,7 +104,7 @@
     </div>
   </div>
 </td>
-<td>{{track.plays | number}}</td>
+<td>{{track.track_plays_count | number}}</td>
 @if (!from.url.includes('albums/')) {
   <td class="album">
     @if (track.album) {
