--- a/src/app/admin/tracks/tracks-table/tracks-table.component.html
+++ b/src/app/admin/tracks/tracks-table/tracks-table.component.html
@@ -1,9 +1,9 @@
 
 <div class="container-padding admin">
   <div class="admin-actions">
-    <button mat-raised-button (click)="openAddTrackDialog()">Add track</button>
-    <button mat-raised-button (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0">Unselect all</button>
-    <button mat-raised-button (click)="deleteSelectedTracks()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium">Delete selected tracks</button>
+    <button mat-icon-button class="add" (click)="openAddTrackDialog()"><mat-icon>create</mat-icon></button>
+    <button mat-icon-button class="default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon></button>
+    <button mat-icon-button class="delete" (click)="deleteSelectedTracks()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon></button>
   </div>
   <table class="admin-table">
     <thead>
