--- a/src/app/admin/tracks/tracks-table/tracks-table.component.html
+++ b/src/app/admin/tracks/tracks-table/tracks-table.component.html
@@ -1,5 +1,6 @@
 
 <div class="container-padding admin">
+  <h1>Manage tracks</h1>
   <div class="admin-actions">
     <button mat-icon-button class="add" (click)="openAddTrackDialog()"><mat-icon>create</mat-icon></button>
     <button mat-icon-button class="default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon></button>
