--- a/src/styles.scss
+++ b/src/styles.scss
@@ -164,11 +164,11 @@ mat-dialog-container{
   --primary-black: #090909;
   --black: #000;
   --light: #ffffff;
-  --lighter: #f5f5f5;
+  --lighter: #e1e1e1;
   --lightest: #f8f8f8;
   --light-black: #1f1f1f;
   --secondary-black: #101010;
-  --gray: #7a7a7a;
+  --gray: #383838;
   --success: #4FBF26;
   --failed: #fa1a1a;
   --primary-text: #fff;
@@ -417,17 +417,29 @@ input[type=email], input[type=password], textarea{
   background: #ffffff;
 }
 .admin-table{
+  box-shadow: 5px 5px 15px var(--lighter);
+  border-radius: 5px;
   width: 100%;
   border-spacing: 0;
   font-size: 14px;
   border-collapse: collapse;
+  margin-top: 20px;
   thead{
+
+    background: var(--lighter);
     height: 50px;
     width: 100%;
     tr{
       height: 100%;
+      border-radius: 5px;
       th{
-        color: var(--light-black);
+        &:first-child{
+          border-top-left-radius: 5px;
+        }
+        &:last-child{
+          border-top-right-radius: 5px;
+        }
+        color: var(--gray);
         height: 100%;
         &:nth-child(1) {
           width: 50px;
@@ -439,13 +451,16 @@ input[type=email], input[type=password], textarea{
   }
   tbody{
     width: 100%;
+    :last-child{
+      border-bottom: none;
+    }
     tr{
       &:hover{
         background: var(--lightest);
 
       }
       height: 50px;
-
+      border-bottom: 1px solid var(--lighter);
       .cover-text{
         display: flex;
         flex-direction: row;
@@ -483,7 +498,8 @@ input[type=email], input[type=password], textarea{
           text-align: center;
         }
       }
-      border-top: 2px solid var(--lighter) !important;
+      //border-bottom: 2px solid var(--lightest) !important;
+
     }
   }
 }
@@ -577,6 +593,10 @@ input[type=email], input[type=password], textarea{
 }
 .admin{
   background: var(--light);
+  h1{
+    color: var(--secondary-black);
+    margin-bottom: 20px;
+  }
   .admin-actions{
     display: flex;
     flex-direction: row;
