--- a/src/app/admin/delete-dialog-generic/delete-dialog-generic.component.html
+++ b/src/app/admin/delete-dialog-generic/delete-dialog-generic.component.html
@@ -4,6 +4,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="cancel()">Cancel</button>
-  <button mat-raised-button color="primary" (click)="confirm()">Confirm</button>
+  <button mat-raised-button [mat-dialog-close]="false" color="primary" (click)="cancel()">Cancel</button>
+  <button mat-raised-button [mat-dialog-close]="true" color="primary" (click)="confirm()">Confirm</button>
 </div>
