--- a/src/app/admin/delete-dialog-generic/delete-dialog-generic.component.html
+++ b/src/app/admin/delete-dialog-generic/delete-dialog-generic.component.html
@@ -1,9 +1,11 @@
-<h1 mat-dialog-title>Confirm action</h1>
-<div mat-dialog-content>
-  <p>Are you sure you want to delete {{selectionService.selectedItems().length}} selected items?</p>
-</div>
+<div class="dialog">
+  <h1 mat-dialog-title>Confirm action</h1>
+  <div mat-dialog-content>
+    <p>Are you sure you want to delete {{selectionService.selectedItems().length}} selected items?</p>
+  </div>
 
-<div mat-dialog-actions>
-  <button mat-raised-button [mat-dialog-close]="false" color="primary" (click)="cancel()">Cancel</button>
-  <button mat-raised-button [mat-dialog-close]="true" color="primary" (click)="confirm()">Confirm</button>
+  <div mat-dialog-actions>
+    <button class="button" mat-raised-button [mat-dialog-close]="false" color="primary" (click)="cancel()">Cancel</button>
+    <button class="button" mat-raised-button [mat-dialog-close]="true" color="primary" (click)="confirm()">Confirm</button>
+  </div>
 </div>
