--- a/src/app/admin/genres/genres.component.html
+++ b/src/app/admin/genres/genres.component.html
@@ -1,1 +1,5 @@
-<app-genre-table [pagedResponse]="(adminGenreService.genres$ | async)!"></app-genre-table>
+<app-table-admin
+  [title]="'Genres'"
+  [data]="adminGenreService.genres$ | async"
+  [columns]="['Name', 'Created at', 'Updated at']"
+></app-table-admin>
