admin table update

--- a/src/app/admin/delete-multiple-entities-dialog/delete-multiple-entities-dialog.component.html
+++ b/src/app/admin/delete-multiple-entities-dialog/delete-multiple-entities-dialog.component.html
@@ -6,6 +6,6 @@
 
   <div mat-dialog-actions>
     <button class="button" mat-raised-button [mat-dialog-close]="false" color="primary" (click)="cancel()">Cancel</button>
-    <button class="button" mat-raised-button [mat-dialog-close]="true" color="primary" (click)="confirm()">Confirm</button>
+    <button class="button" mat-raised-button [mat-dialog-close]="true" color="warn" (click)="confirm()">Confirm</button>
   </div>
 </div>
