--- a/src/app/admin/table-admin/table-admin.component.html
+++ b/src/app/admin/table-admin/table-admin.component.html
@@ -1,9 +1,18 @@
 <div class="container-padding admin">
   <h1>Manage {{title}}</h1>
-  <div class="admin-actions">
-    <button mat-icon-button class="add" (click)="openAddDialog()"><mat-icon>create</mat-icon></button>
-    <button mat-icon-button class="default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon></button>
-    <button mat-icon-button class="delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon></button>
+  <div class="actions">
+    <div class="search">
+      <mat-form-field>
+        <mat-label>Search {{title}}</mat-label>
+        <input matInput />
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="search()">Search</button>
+    </div>
+    <div class="admin-actions">
+      <button mat-icon-button class="add" (click)="openAddDialog()"><mat-icon>create</mat-icon></button>
+      <button mat-icon-button class="default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon></button>
+      <button mat-icon-button class="delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon></button>
+    </div>
   </div>
 
   <table class="admin-table">
