--- a/src/app/admin/table-admin/table-admin.component.html
+++ b/src/app/admin/table-admin/table-admin.component.html
@@ -9,9 +9,9 @@
       <button mat-raised-button color="primary" (click)="search()">Search</button>
     </div>
     <div class="admin-actions">
-      <button mat-icon-button class="add" (click)="openAddDialog()"><mat-icon>create</mat-icon></button>
-      <button mat-icon-button class="default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon></button>
-      <button mat-icon-button class="delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon></button>
+      <button mat-raised-button class="button add" (click)="openAddDialog()"><mat-icon>create</mat-icon> Add new</button>
+      <button mat-raised-button class="button default" (click)="unselectAll()" [disabled]="_selectionService.selectedItems().length === 0"><mat-icon>indeterminate_check_box</mat-icon> Unselect</button>
+      <button mat-raised-button class="button delete" (click)="deleteSelected()" [disabled]="_selectionService.selectedItems().length === 0" matBadge="{{_selectionService.selectedItems().length}}" matBadgeSize="medium"><mat-icon>delete_sweep</mat-icon> Delete selected</button>
     </div>
   </div>
 
@@ -25,6 +25,7 @@
         @for (column of columns; track column) {
           <th>{{column}}</th>
         }
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -101,6 +102,21 @@
               }
             }
           }
+          <td>
+            <button mat-icon-button [matMenuTriggerFor]="moreMenu" class="more">
+              <mat-icon>more_horizontal</mat-icon>
+            </button>
+          </td>
+          <mat-menu #moreMenu=matMenu>
+            <button mat-menu-item>
+              <mat-icon>edit</mat-icon>
+              Edit
+            </button>
+            <button mat-menu-item>
+              <mat-icon>delete</mat-icon>
+              Delete
+            </button>
+          </mat-menu>
         </tr>
       }
     </tbody>
