--- a/src/app/admin/tracks/tracks.component.html
+++ b/src/app/admin/tracks/tracks.component.html
@@ -4,3 +4,10 @@
   [data]="adminTrackService.tracks$ | async"
   [columns]="['Title', 'Owner', 'Featuring', 'Album', 'Explicit', 'Plays', 'Created at', 'Updated at']"
 ></app-table-admin>
+
+
+<!--<app-table-admin-->
+<!--  [title]="'Deleted Tracks'"-->
+<!--  [data]="adminTrackService.softTracks$ | async"-->
+<!--  [columns]="['Title', 'Owner', 'Featuring', 'Album', 'Explicit', 'Plays', 'Created at', 'Updated at']"-->
+<!--&gt;</app-table-admin>-->
