--- a/src/app/admin/table-admin/table-admin.component.html
+++ b/src/app/admin/table-admin/table-admin.component.html
@@ -112,7 +112,7 @@
               <mat-icon>edit</mat-icon>
               Edit
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="deleteItem(item)">
               <mat-icon>delete</mat-icon>
               Delete
             </button>
