--- a/src/app/core/header/small-header/small-header.component.html
+++ b/src/app/core/header/small-header/small-header.component.html
@@ -1,4 +1,4 @@
-<div class="small-header"  [@fade]="'in'">
+<div class="small-header">
   <div class="left" >
     <div class="image" [ngClass]="{'opacity-1' : shouldShow}" >
       @if(image) {
