--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -104,6 +104,7 @@ table{
           }
         }
         .image{
+          width: 40px;
           height: 100%;
           display: flex;
           align-items: center;
